--- a/index.html
+++ b/index.html
@@ -70,22 +70,36 @@
 <div class="arrow-separator arrow-theme"></div>
 
 <div class="fullwidth colour2 clearfix">
-	<div id="maincont" class="bodycontainer clearfix" data-uk-scrollspy="{cls:'uk-animation-fade', delay: 300, repeat: true}">
+	<div id="maincont" class="bodycontainer clearfix">
 
 		<p>
 			<strong>SkyNgine</strong> is a team of web & mobile developers which established on 1st January 2016.
 			SkyNgine provide a completed business solutions to Cambodian SMEs.
-			We provide services such as Custom Web Application development, Customer Mobile Application Development,
-			WordPress Development, Web Hosting & Domain Registration.
+			We provide services such as Web application development, Mobile application development,
+			WordPress development, Web Hosting & Domain Registration.We provide a full spectrum of custom software services,
+            including web and mobile application development. Our offerings cover all stages of the software development life cycle:
+            from business analysis, design, and prototyping to the actual development, quality assurance, and post-project maintenance and support.
 		</p>
         <h2>we'll let you know when we ready</h2>
-        <p>If you would like to receive <strong>special offers</strong> please send us your email address below:</p>
-		<div id="signupform" class="sb-search clearfix">
-			<form method="post" id="contact" class="clearfix">
-				<input class="sb-search-input" placeholder="Enter email ..." type="text" value="">
-				<input class="sb-search-submit" value="" type="submit">
-				<button class="formbutton" type="submit"><span class="fa fa-cloud-upload"></span></button>
-			</form>
+        <p>If you would like to receive <strong>special offers</strong> please contact us:</p>
+		<div id="contact" class="bodycontainer clearfix" data-uk-scrollspy="{cls:'uk-animation-fade', delay: 300, repeat: true}">
+
+			<div id="address" class="clearfix">
+				<ul>
+					<li>
+						<a title="Phone" href="">
+							<span class="fa fa-mobile-phone"></span><br>
+							070 62 22 11
+						</a>
+					</li>
+					<li>
+						<a title="Email" href="">
+							<span class="fa fa-envelope"></span><br>
+							skyngine@gmail.com
+						</a>
+					</li>
+				</ul>
+			</div>
 		</div>
 	
 	</div>
@@ -98,19 +112,14 @@
 
         <div id="commentslider" class="owl-carousel">
             <div class="item">
-                <p>"I assemble this team to modernize Cambodian SMEs from paperwork business to computerized business. By that they can reduce cost and give them more opportunity to compete with others during <strong> AEC era </strong> ."</p>
+                <p>"
+                    <strong>SkyNgine</strong> will provide reliable services with affable price to SMEs or Startup Businesses.
+                    Our team using only latest technologies to provide you high quality products, and long term maintenance and support.
+                    <br> If you are an <em>agency</em> and you need extra hands to work on your project, we also do outsource.
+					"</p>
             	<p class="author">Kong Kimsay <br>Founder</p>
             </div>
-            <div class="item">
-                <p>"<strong>Quality</strong> is our first priority. Our team is assembly of young & talent developer and we use the latest technology to ensure our customers have the best experience."</p>
-            	<p class="author">Kong Divin <br>Co-Founder</p>
-            </div>
-            <div class="item">
-                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Donec quis enim</strong> nulla. Suspendisse posuere arcu ac eros iaculis egestas commodo risus tempus. <em>Fusce placerat</em> nulla nisi. Proin congue erat non orci adipiscing nec <strong>porttitor</strong> lacus egestas."</p>
-            	<p class="author">- David Jones</p>
-            </div>
         </div>
-	
 	</div>
 </div>
 
