--- a/index.html
+++ b/index.html
@@ -74,11 +74,9 @@
 
 		<p>
 			<strong>SkyNgine</strong> is a team of web & mobile developers which established on 1st January 2016.
-			SkyNgine provide a completed business solutions to Cambodian SMEs.
-			We provide services such as Web application development, Mobile application development,
-			WordPress development, Web Hosting & Domain Registration.We provide a full spectrum of custom software services,
-            including web and mobile application development. Our offerings cover all stages of the software development life cycle:
-            from business analysis, design, and prototyping to the actual development, quality assurance, and post-project maintenance and support.
+			SkyNgine provide a complete business solutions to Cambodian SMEs.
+			We develop Web application, Mobile application, WordPress, Web Hosting & Domain Registration. <strong>SkyNgine</strong>
+			provide a full spectrum of custom software services, including web and mobile application.
 		</p>
         <h2>we'll let you know when we ready</h2>
         <p>If you would like to receive <strong>special offers</strong> please contact us:</p>
@@ -87,13 +85,13 @@
 			<div id="address" class="clearfix">
 				<ul>
 					<li>
-						<a title="Phone" href="">
+						<a title="Phone">
 							<span class="fa fa-mobile-phone"></span><br>
 							070 62 22 11
 						</a>
 					</li>
 					<li>
-						<a title="Email" href="">
+						<a title="Email">
 							<span class="fa fa-envelope"></span><br>
 							skyngine@gmail.com
 						</a>
@@ -113,7 +111,7 @@
         <div id="commentslider" class="owl-carousel">
             <div class="item">
                 <p>"
-                    <strong>SkyNgine</strong> will provide reliable services with affable price to SMEs or Startup Businesses.
+                    <strong>SkyNgine</strong> will provide reliable services with affable price to SMEs and Startup Businesses.
                     Our team using only latest technologies to provide you high quality products, and long term maintenance and support.
                     <br> If you are an <em>agency</em> and you need extra hands to work on your project, we also do outsource.
 					"</p>
