--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <!--[if IE 8 ]><html class="ie ie8" lang="en"><![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!--><html lang="en"><!--<![endif]-->
 <head>
-<!-- Website Template designed by www.downloadwebsitetemplates.co.uk -->
 <meta charset="UTF-8">
 <title>SkyNgine - Modernizing Cambodia Businesses</title>
 <meta name="description" content="">
@@ -112,7 +111,7 @@
             <div class="item">
                 <p>"
                     <strong>SkyNgine</strong> will provide reliable services with affable price to SMEs and Startup Businesses.
-                    Our team using only latest technologies to provide you high quality products, and long term maintenance and support.
+                    Our team using only latest technologies to provide you high quality products, long term maintenance and support.
                     <br> If you are an <em>agency</em> and you need extra hands to work on your project, we also do outsource.
 					"</p>
             	<p class="author">Kong Kimsay <br>Founder</p>
